--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
           <div class="info-text">
             <div class="info-label">Portfolio</div>
             <div class="info-value">
-              <a href="https://janedoe.dev" target="_blank">Not Abraham</a>
+              <a href="" target="_blank">Not Abraham</a>
             </div>
           </div>
         </div>
